/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.metadata";
option java_multiple_files = true;

import "trac/metadata/type.proto";
import "trac/metadata/object_id.proto";


enum JobType {
  JOB_TYPE_NOT_SET = 0;
  RUN_MODEL = 1;
  RUN_FLOW = 2;
  IMPORT_MODEL = 3;
  IMPORT_DATA = 4;
}

message JobDefinition {

  JobType jobType = 1;
  TagSelector target = 2;

  map<string, Value> parameters = 3;
  map<string, TagSelector> inputs = 4;
  map<string, TagSelector> outputs = 5;
  map<string, TagSelector> models = 6;
}
